[gd_scene load_steps=12 format=3 uid="uid://vptyxcuxw8vd"]

[ext_resource type="Script" uid="uid://btk4md0d5k7hx" path="res://Script/enemy.gd" id="1_4gyqm"]
[ext_resource type="Texture2D" uid="uid://d1rdnwye1jf5u" path="res://0x72_DungeonTilesetII_v1.7/frames/plague_big_demon_all_anim.png" id="2_md0e3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4ra3w"]
atlas = ExtResource("2_md0e3")
region = Rect2(128, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uy6h"]
atlas = ExtResource("2_md0e3")
region = Rect2(160, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4w8v"]
atlas = ExtResource("2_md0e3")
region = Rect2(192, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwavj"]
atlas = ExtResource("2_md0e3")
region = Rect2(224, 0, 32, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_dxifv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ra3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uy6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4w8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwavj")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_md0e3"]
size = Vector2(17, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4gyqm"]
size = Vector2(20, 25)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_md0e3"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ra3w"]
bg_color = Color(0.929412, 0.0352941, 0.105882, 1)

[node name="Enemy" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_4gyqm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 6)
sprite_frames = SubResource("SpriteFrames_dxifv")
animation = &"Run"
offset = Vector2(0, -18)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -12)
shape = SubResource("RectangleShape2D_md0e3")

[node name="enemy_hitbox" type="Area2D" parent="."]
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
position = Vector2(0, -12.5)
shape = SubResource("RectangleShape2D_4gyqm")

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="healthbar" type="ProgressBar" parent="."]
offset_left = -12.0
offset_right = 12.0
offset_bottom = 2.0
theme_override_styles/background = SubResource("StyleBoxFlat_md0e3")
theme_override_styles/fill = SubResource("StyleBoxFlat_4ra3w")
max_value = 80.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
